Text fade set up to prevent draftjs flicker

--- a/src/styles/components/cards/Comments/MessageCard.module.scss
+++ b/src/styles/components/cards/Comments/MessageCard.module.scss
@@ -5,6 +5,12 @@
     cursor: move;
     align-self: flex-start;
     margin-top: 10px;
+    opacity: 0;
+    transition: opacity 0.1s;
+
+    &.visible {
+        opacity: 1;
+    }
 
     &.isOwnComment {
         align-self: flex-end;
